# now-we-feast

./: README.md  docker-compose.yml  pyproject.toml  training.py
feature_repo/: example.py  feature_store.yaml
feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
go/: main.go
go_client/: go.mod
python_client/: client_fetch.py  inference.py  server_fetch.py
