[tool.poetry]
name = "now-we-feast"
version = "0.1.0"
description = ""
authors = ["jmeisele <jmeisele@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.5"
redis = "^4.1.4"
feast = "^0.20.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pyinstrument = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
